--- a/styles.css
+++ b/styles.css
@@ -274,19 +274,9 @@ footer {
         flex-direction: column;
     }
 
-    .about-text {
+    #about-column-text {
         text-align: center;
-        max-width: 500px;
-        font-size: 1.3em;
-        padding: 20px 0 0 20px;
-        margin-left: 20px;
-    }
-
-    .about-list {
-        text-align: left;
-        max-width: 500px;
-        font-size: 1.5em;
-        padding: 20px 0 0 100px;
+        padding: 10px 15px 0 15px;
     }
 
     .fragrance-row {
